# daomix

./: .gitignore  .npmrc  .tmp-sender.json  .tmp-tally.json  CROSS_CHAIN_MIXING_GUIDE.md  DEMO_QUICKSTART.md  DEMO_UI_SUMMARY.md  DEMO_WORKING_FINAL.md  DOCUMENTATION_INDEX.md  README.md  TRANSPORT_MIX_INTEGRATION.md  XCM_IMPLEMENTATION_STATUS.md  daochain-dev.md  demo-manual.js  demo-ui-publishing.html  demo-ui-server.js  demo-ui.html  package-lock.json  package.json  pnpm-workspace.yaml  polkadot-browser-bundle.js  polkadot-bundle-entry.js  rebuild-and-test.sh  run-daomix-e2e-local.sh  test-transport-mix-demo.sh  tmp_f1_article.html  tmp_f1_payload.json  ws-transport-proxy.js
XCM/: README.md
XCM/pallets/mix-job/: Cargo.toml
XCM/pallets/mix-job/src/: lib.rs  mock.rs  tests.rs
XCM/runtime/configs/: xcm_config.rs
contracts/: README.md  package.json  tsconfig.json
contracts/artifacts/contracts/DaoMixVoting.sol/: DaoMixVoting.dbg.json  DaoMixVoting.json
contracts/cache/: solidity-files-cache.json
contracts/contracts/: DaoMixVoting.sol
contracts/scripts/: deploy.ts
contracts/test/: DaoMix.http-integration.ts  DaoMix.integration.ts  DaoMixVoting.ts
contracts/typechain-types/: DaoMixVoting.ts  hardhat.d.ts  index.ts
contracts/typechain-types/factories/: DaoMixVoting__factory.ts  index.ts
dapp/: README.frontend.mdx  package.json
dapp/app/: layout.tsx  page.tsx
docs/: CHANGES_SUMMARY.md  CLEANUP_FIX_SUMMARY.md  CLEAN_UI_IMPLEMENTATION.md  CROSS_CHAIN_MIXING_GUIDE.md  DEMO2_IMPLEMENTATION_STATUS.md  DEMO2_PUBLISHING_DESIGN.md  DEMO_CLEANUP_GUIDE.md  DEMO_COMPLETE.md  DEMO_FINAL_STATUS.md  DEMO_FIXES_COMPLETE.md  DEMO_FULLY_OPERATIONAL.md  DEMO_IMPLEMENTATION_SUMMARY.md  DEMO_NOW_WORKING.md  DEMO_QUICKSTART.md  DEMO_README.md  DEMO_SETUP_COMPLETE.md  DEMO_UI_CHANGELOG.md  DEMO_UI_GUIDE.md  DEMO_UI_README.md  POLKADOT_BUNDLE_FIX.md  QUICK_START_DEMO.md  REAL_DEMO_COMPLETE.md  REAL_XCM_IMPLEMENTATION.md  TRANSPORT_MIX_COMPLETE.md  TRANSPORT_MIX_FINAL.md  TRANSPORT_MIX_FIX.md  TRANSPORT_MIX_HYBRID.md  TRANSPORT_MIX_USER_GUIDE.md  VERSION_FIX_APPLIED.md  WEBSOCKET_RACE_FIX.md
final-script/: README.md  run-daomix-e2e.sh
how to run/: ADD_SECOND_PARACHAIN.md  README.md
mixer/: .run-e2e-now.sh  .run-e2e.sh  .tmp-mix0.json  .tmp-mix1.json  .tmp-mix2.json  .tmp-sender.json  .tmp-tally.json  README.md  TEST_DOCUMENTATION.md  package.json  test-http-rpc.sh  test-transport-manual.ts  tsconfig.json
mixer/examples/: castOnionBallotsDemo.ts  orchestratorDemo.ts  runDaoMixDaoChain.ts  runTransportRpc.ts
mixer/hybrid/: .env.example  README.md  run_pipeline.sh
mixer/scripts/: generateOnionKeys.ts  start-all-and-test.sh  start-scale-test.sh  test-ethereum-voting.sh
mixer/servers/: castOnionBallots.ts  mixNodeServer.ts  orchestrator.ts  transportNodeServer.ts
mixer/src/: castOnionBallots.ts  castOnionBallotsDemo.ts  config.ts  crypto.ts  debugSystemRemark.ts  generateKeys.ts  index.ts  inspectRuntime.ts  mixJobClient.ts  mixJobOrchestrator.ts  mixJobOrchestratorRunner.ts  mixNodeServer.ts  onion.ts  orchestrator.ts  orchestratorDemo.ts  pqCrypto.ts  runDaoMixDaoChain.ts  runEthereumContractVoting.ts  runEthereumContractVotingScaleTest.ts  runTransportRpc.ts  sharding.ts  shared.ts  substrateClient.ts  transportClient.ts  transportNodeServer.ts  transportOnion.ts  types.d.ts  wsProxyLauncher.ts  wsTransportProxy.ts
mixer/src/crypto/: crypto.ts
mixer/src/onion/: onion.ts  transportOnion.ts
mixer/src/substrate/: substrateClient.ts  transportClient.ts
mixer/src/utils/: config.ts  sharding.ts
mixer/test/: daochain.e2e.test.ts  onion.test.ts  pqCrypto.test.ts  sharding.test.ts  verify-mixjob-pallet.ts  xcm-real.e2e.test.ts
mixnode/: package.json
mixnode/src/: index.ts
polkadot-sdk/: Cargo.toml  README.md  chain_spec.json  chain_spec_raw.json  dao_chain_patch.json  daochain-dev-spec.json  dev-spec-new.json  votingchain-spec.json
polkadot-sdk/substrate/frame/executive/src/: lib.rs
polkadot-sdk/templates/parachain/: README.md
polkadot-sdk/templates/parachain/node/: Cargo.toml
polkadot-sdk/templates/parachain/node/src/: chain_spec.rs
polkadot-sdk/templates/parachain/pallets/daomix-voting/: Cargo.toml
polkadot-sdk/templates/parachain/pallets/daomix-voting/src/: lib.rs
polkadot-sdk/templates/parachain/pallets/mix-job/: Cargo.toml
polkadot-sdk/templates/parachain/pallets/mix-job/src/: lib.rs
polkadot-sdk/templates/parachain/runtime/: Cargo.toml
polkadot-sdk/templates/parachain/runtime/src/: lib.rs
polkadot-sdk/templates/parachain/runtime/src/configs/: mod.rs
polkadot-sdk/templates/polokol-chain/: Cargo.toml  README.md
polkadot-sdk/templates/polokol-chain/node/: Cargo.toml
polkadot-sdk/templates/polokol-chain/node/src/: chain_spec.rs  main.rs  service.rs
polkadot-sdk/templates/polokol-chain/pallets/dao-voting/src/: lib.rs
polkadot-sdk/templates/polokol-chain/pallets/mixnet-registry/: Cargo.toml
polkadot-sdk/templates/polokol-chain/pallets/mixnet-registry/src/: lib.rs
polkadot-sdk/templates/polokol-chain/runtime/: Cargo.toml
polkadot-sdk/templates/polokol-chain/runtime/src/: genesis.rs  lib.rs  runtime.rs
polokol-chain/: Cargo.toml  package.json
polokol-chain/node/: Cargo.toml
polokol-chain/node/src/: cli.rs  command.rs
polokol-chain/pallets/dao-voting/: Cargo.toml
polokol-chain/pallets/mix-job/: Cargo.toml
polokol-chain/pallets/mix-job/src/: mock.rs  tests.rs
polokol-chain/runtime/: Cargo.toml  build.rs
polokol-chain/runtime/src/: constants.rs  runtime.rs
scripts/: demo-cleanup.sh  demo-setup.sh  demo-start.sh  watch-mix-logs.sh
sdk/: package.json
sdk/src/: DotMixProvider.ts  index.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/components/: DiagonalTexture.tsx  Navbar.tsx
web/app/sandbox/: page.tsx
web/app/utils/: textStyles.ts
