[package]
name = "polokol-runtime"
version = "4.0.0-dev"
edition = "2021"

[build-dependencies]
substrate-wasm-builder = { version = "6.0.0", package = "substrate-wasm-builder" }

[dependencies]
codec = { package = "parity-scale-codec", version = "3.4.0", default-features = false }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, optional = true }
frame-executive = { version = "4.0.0-dev", default-features = false }
frame-support = { version = "4.0.0-dev", default-features = false }
frame-system = { version = "4.0.0-dev", default-features = false }
frame-system-benchmarking = { version = "4.0.0-dev", default-features = false, optional = true }
frame-system-rpc-runtime-api = { version = "4.0.0-dev", default-features = false }
pallet-balances = { version = "4.0.0-dev", default-features = false }
pallet-dao-voting = { path = "../pallets/dao-voting", default-features = false }
pallet-mixnet-registry = { path = "../pallets/mixnet-registry", default-features = false }
pallet-sudo = { version = "4.0.0-dev", default-features = false }
pallet-timestamp = { version = "4.0.0-dev", default-features = false }
pallet-transaction-payment = { version = "4.0.0-dev", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "4.0.0-dev", default-features = false }
sp-api = { version = "4.0.0-dev", default-features = false }
sp-block-builder = { version = "4.0.0-dev", default-features = false }
sp-consensus-aura = { version = "0.11.0", default-features = false }
sp-core = { version = "7.0.0-dev", default-features = false }
sp-inherents = { version = "4.0.0-dev", default-features = false }
sp-offchain = { version = "4.0.0-dev", default-features = false }
sp-runtime = { version = "7.0.0-dev", default-features = false }
sp-session = { version = "4.0.0-dev", default-features = false }
sp-std = { version = "4.0.0-dev", default-features = false }
sp-transaction-pool = { version = "4.0.0-dev", default-features = false }
sp-version = { version = "7.0.0-dev", default-features = false }

[features]
default = ["std"]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-system-benchmarking/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-sudo/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "pallet-transaction-payment/runtime-benchmarks",
]
std = [
    "codec/std",
    "frame-benchmarking/std",
    "frame-executive/std",
    "frame-support/std",
    "frame-system/std",
    "frame-system-benchmarking/std",
    "frame-system-rpc-runtime-api/std",
    "pallet-balances/std",
    "pallet-dao-voting/std",
    "pallet-mixnet-registry/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-consensus-aura/std",
    "sp-core/std",
    "sp-inherents/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-std/std",
    "sp-transaction-pool/std",
    "sp-version/std",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "pallet-balances/try-runtime",
    "pallet-sudo/try-runtime",
    "pallet-timestamp/try-runtime",
    "pallet-transaction-payment/try-runtime",
]
