[package]
name = "pallet-mix-job"
description = "FRAME pallet for DaoMix mixing job management."
version = "0.0.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
sp-std = { workspace = true, default-features = false }

frame = { workspace = true, default-features = false, features = [
	"experimental",
	"runtime",
] }

[features]
default = ["std"]
runtime-benchmarks = ["frame/runtime-benchmarks"]
std = ["codec/std", "frame/std", "scale-info/std", "sp-std/std"]
try-runtime = ["frame/try-runtime"]
