[workspace.package]
authors = ["DaoMix Team"]
edition = "2021"
homepage = "https://github.com/daomix"
license = "Apache-2.0"
repository = "https://github.com/daomix"

[workspace]
members = [
    "node",
    "runtime",
    "pallets/dao-voting",
    "pallets/mix-job",
    "pallets/mixnet-registry",
]
resolver = "2"

[profile.release]
panic = "unwind"
