[package]
name = "pallet-dao-voting"
version = "4.0.0-dev"
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.4.0", default-features = false }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, optional = true }
frame-support = { version = "4.0.0-dev", default-features = false }
frame-system = { version = "4.0.0-dev", default-features = false }
sp-runtime = { version = "7.0.0-dev", default-features = false }
sp-std = { version = "4.0.0-dev", default-features = false }

[features]
default = ["std"]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
std = [
    "codec/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-std/std",
]
