[package]
name = "pallet-mix-job"
description = "FRAME pallet for DaoMix mixing job management."
version = "0.0.0"
license = "Unlicense"
authors = ["DaoMix Team"]
edition = "2021"
publish = false

[dependencies]
codec = { package = "parity-scale-codec", version = "3.4.0", features = ["derive"], default-features = false }
scale-info = { version = "2.10.0", features = ["derive"], default-features = false }
sp-std = { version = "4.0.0-dev", default-features = false }

frame-support = { version = "4.0.0-dev", default-features = false }
frame-system = { version = "4.0.0-dev", default-features = false }

[features]
default = ["std"]
runtime-benchmarks = ["frame-support/runtime-benchmarks", "frame-system/runtime-benchmarks"]
std = ["codec/std", "frame-support/std", "frame-system/std", "scale-info/std", "sp-std/std"]
try-runtime = ["frame-support/try-runtime"]