# NOTE: Used by my DaoMix project as the base parachain template (no changes yet).
[package]
name = "polokol-node"
description = "DaoMix parachain node built with Substrate and Cumulus"
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false
build = "build.rs"

[lints]
workspace = true

[dependencies]
clap = { features = ["derive"], workspace = true }
codec = { workspace = true, default-features = true }
color-print = { workspace = true }
docify = { workspace = true }
futures = { workspace = true }
jsonrpsee = { features = ["server"], workspace = true }
log = { workspace = true, default-features = true }
serde = { features = ["derive"], workspace = true, default-features = true }

polkadot-sdk = { workspace = true, features = ["node", "polkadot-primitives"] }

polokol-runtime = { path = "../runtime", default-features = false }

# Substrate
prometheus-endpoint = { workspace = true, default-features = true }

[build-dependencies]
polkadot-sdk = { workspace = true, features = ["substrate-build-script-utils"] }

[features]
default = ["std"]
std = [
	"log/std",
	"polokol-runtime/std",
	"polkadot-sdk/std",
]
runtime-benchmarks = [
	"polokol-runtime/runtime-benchmarks",
	"polkadot-sdk/runtime-benchmarks",
]
try-runtime = [
	"polokol-runtime/try-runtime",
	"polkadot-sdk/try-runtime",
]
