[package]
name = "pallet-mix-job"
description = "FRAME pallet for DaoMix mixing job management."
version = "0.0.0"
license = "Unlicense"
authors = ["DaoMix Team"]
edition = "2021"
publish = false

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
sp-std = { workspace = true, default-features = false }

frame = { workspace = true, default-features = false, features = [
	"experimental",
	"runtime",
] }

[features]
default = ["std"]
runtime-benchmarks = ["frame/runtime-benchmarks"]
std = ["codec/std", "frame/std", "scale-info/std", "sp-std/std"]
try-runtime = ["frame/try-runtime"]